# RustToPythonHelloWorld

./: Cargo.toml  setup.py
hello_world_rs/: __init__.py
src/: lib.rs
