[package]
name = "hello_world_rs"
version = "0.1.0"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension_module"]

[lib]
name = "helllo_world_rs"
crate-type = ["rlib", "cdylib"]
